--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,12 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @sessionx-bind 'p'
 
+# icon
+set -g @catppuccin_session_icon ""
+set -g @catppuccin_directory_icon ""
+set -g @catppuccin_git_icon ""
+set -g @catppuccin_date_time_icon "󰃰"
+
 # theme (reference - omerxx/dotfiles)
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
